# wizard-chess

./: .gitignore  README.md  arduinno_pi_comm.ino  parsingInput.py  piCom  piCom.py
embeddings/: .gitignore  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  CapturedSide.cpp  CapturedSide.h  ConditionalTransition.cpp  ConditionalTransition.h  King.h  Knight.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  README.md  Rook.cpp  Rook.h  Wizard-Chess-Dev.pro.user.0945f72  Wizard-Chess-Dev.pro.user.0fc519b  Wizard-Chess-Dev.pro.user.c0ab46c  Wizard-Chess.pro  a.out  demo2.pro  displaypiece.cpp  home.cpp  home.h  inputs.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  motorsync.ino  qt.txt  resources.qrc  secondscreen.cpp  (+11 more)
embeddings/.qtc_clangd/.cache/clangd/index/: Bishop.cpp.FEB6D7ACE5F5DCFD.idx  Bishop.h.3F922A444574974A.idx  Board.cpp.A50FD71BA2075CEA.idx  Board.h.329578317443A104.idx  CapturedSide.cpp.F2AE12121AE0724E.idx  CapturedSide.h.B43F83AD8001BD2F.idx  ConditionalTransition.cpp.26D096B7B7E622BA.idx  ConditionalTransition.h.C3CEC3CE825F67AA.idx  EmptyPiece.cpp.39533880A28FC9CB.idx  King.cpp.5B478A4085E4CDC6.idx  King.h.5220F530AE457BF1.idx  Knight.cpp.EC76390C27A7C716.idx  (+557 more)
embeddings/digitalGame/: Board.h  King.cpp  main.cpp
embeddings/limitSwitch/: main.cpp  switchClass.hpp  switches.cpp
embeddings/motors/: motorsync.ino  test.ino
embeddings/qt/: CMakeLists.txt  main.cpp  mainscreen.cpp  mainscreen.h  secondscreen.cpp  secondscreen.h  thirdscreen.cpp  thirdscreen.h  welcomescreen.cpp  welcomescreen.h
mechanical/: README.md
software/: README.md  script.py  speech.txt  voicerecognition.py
software/digitalGame/: .gitignore  Bishop.cpp  Bishop.h  Bishop.hpp  Board.cpp  Board.h  Castle.cpp  Castle.h  Castle.hpp  EmptyPiece.cpp  EmptyPiece.h  King.cpp  King.h  King.hpp  Knight.cpp  Knight.h  Knight.hpp  Pawn.cpp  Pawn.h  Pawn.hpp  Piece.cpp  Piece.h  Piece.hpp  Queen.cpp  Queen.h  Queen.hpp  Rook.cpp  Rook.h  a.out  main.cpp  stockfish.cpp  stockfish.h  stockfish.hpp
